--- a/task03_0606/Views/Member/Register.cshtml
+++ b/task03_0606/Views/Member/Register.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using task03_0606.Models
 
 @{
     ViewBag.Title = "Register";
@@ -58,9 +58,9 @@
                             <label for="inputCity">城市</label>
                             <select id="city" name="city" class="form-control">
                                 <option selected>選擇城市</option>
-                                
-                                @foreach (var item in this.Model) {
-                                    <option>@Html.DisplayFor(modelItem => item)</option>
+
+                                @foreach (var item in ViewBag.city) {
+                                    <option value="@item">@item</option>
                                 }
 
 
@@ -70,14 +70,16 @@
                             <label for="inputDistrict">行政區</label>
                             <select id="district" name="district" class="form-control">
                                 <option selected>選擇行政區</option>
-                                
+                                @foreach (var item in ViewBag.district) {
+                                    <option value="@item">@item</option>
+                                }
                             </select>
                         </div>
                         <div class="col-md">
                             <label for="inputRoad">路名</label>
                             <select id="road" name="road" class="form-control">
                                 <option selected>選擇路名</option>
-                                
+
                             </select>
                         </div>
                     </div>
