--- a/task03_0606/Views/Home/Order.cshtml
+++ b/task03_0606/Views/Home/Order.cshtml
@@ -1,5 +1,4 @@
-﻿@using task03_0606.Models
-@model List<OrderList> 
+﻿@model List<task03_0606.Models.OrderList> 
 @{
     ViewBag.Title = "Order";
 }
@@ -11,14 +10,16 @@
 <div class="row">
     <div class="col-xl-12 col-sm-12 mb-12 ">
         <div class="card-header">
-            <table class="table" >
-                <tr id="orderDetail">
-                    <th>訂單編號：<label id ="orderDetail_orderID">201806060001</label></th>
-                    <th>座位：    <label id="orderDetail_seatID">  15          </label></th>
-                    <th>訂餐時間：<label id="orderDetail_time">    11:59 PM    </label></th>
-                    <th><a href="#" class="btn btn-success "><i class="fa fa-fw fa-sign-in"></i>出餐</a></th>
-                </tr>
-            </table>
+            <form method="post" action="" id="orderDetailForm">
+                <table class="table">
+                    <tr id="orderDetail">
+                        <th>訂單編號：<input id="orderDetail_orderID" name="orderDetail_orderID" value="201806060001"/></th>
+                        <th>座位：    <label id="orderDetail_seatID"  name="orderDetail_seatID">  15          </label></th>
+                        <th>訂餐時間：<label id="orderDetail_time"    name="orderDetail_time">    11:59 PM    </label></th>
+                        <th><a href="#" class="btn btn-success "><i class="fa fa-fw fa-sign-in"></i>出餐</a></th>
+                    </tr>
+                </table>
+            </form>
         </div>
         <div class="table-responsive-sm">
             <table class="table table-hover">
@@ -33,16 +34,18 @@
                     </tr>
                 </thead>
                 <tbody>
+                  
+                <tr>
+                    <td>00001</td>
+                    <td>可樂(中)</td>
+                    <td>2</td>
+                    <td>30</td>
+                    <td>60</td>
+                    <td>去冰</td>
+                </tr>
+                    
                     <tr>
-                        <td>00001</td>
-                        <td>可樂(中)</td>
-                        <td>2</td>
-                        <td>30</td>
-                        <td>60</td>
-                        <td>去冰</td>
-                    </tr>
-                    <tr>
-                        <td>00005</td>
+                        <td></td>
                         <td>薯條(中)</td>
                         <td>1</td>
                         <td>50</td>
@@ -57,7 +60,7 @@
                         <td>50</td>
                         <td></td>
                     </tr>
-               
+
                 </tbody>
                 <thead>
                     <tr>
@@ -94,16 +97,16 @@
                     </thead>
 
                     <tbody>
-                        @foreach (OrderList order in orders)
+                        @foreach (task03_0606.Models.OrderList order in Model)
                         {
                         <tr class="orderListItem">
-                            <td></td>
-                            <td>15</td>
-                            <td>2018-06-06 11:59 PM</td>
-                            <td></td>
+                            <td>@order.OrderId</td>
+                            <td>@order.SeatID</td>
+                            <td>@order.OrderTime</td>
+                            <td>@order.FinshTime</td>
                         </tr>
                         }
-                        <tr class="orderListItem">
+                        @*<tr class="orderListItem">
                             <td>201806060005</td>
                             <td>20</td>
                             <td>2018-06-06 12:59 PM</td>
@@ -120,7 +123,7 @@
                             <td>20</td>
                             <td>2018-06-07 12:59 PM</td>
                             <td></td>
-                        </tr>
+                        </tr>*@
                     </tbody>
                 </table>
             </div>
@@ -135,9 +138,10 @@
         //alert(this.innerText);
         //alert(this.cells[0].innerText);
         //$("#debug").text(this.cells[0].innerText);
-        $("#orderDetail_orderID").text(this.cells[0].innerText);
+        $("#orderDetail_orderID").val(this.cells[0].innerText);
         $("#orderDetail_seatID").text(this.cells[1].innerText);
         $("#orderDetail_time").text(this.cells[2].innerText);
+        $("#orderDetailForm").submit();
     });
 
 
